<resources>
    <string name="app_name">Ti-Tip Agent</string>
    <string name="dashboard_goods_history_btn">Riwayat Titipan</string>
    <string name="history_text">Riwayat Titipan</string>
    <string name="dashboard_active">Titipan</string>
    <string name="dashboard_more_active">Selengkapnya >></string>
    <string name="konfirmasi_titipan_agent">Konfirmasi Ringkasan Titipan Dari Customer</string>
    <string name="nama_titipan_label">Nama titipan</string>
    <string name="nama_penitip_label">Nama penitip</string>
    <string name="dim_weight_label">Dimensi / berat</string>
    <string name="biaya_penitipan_label">Biaya penitipan</string>
    <string name="biaya_penitipan">Rp15000</string>
    <string name="tombol_konfirmasi">Konfirmasi</string>
    <string name="username_label">Username</string>
    <string name="nope_label">Nomor HP</string>
    <string name="alamat_label">Alamat</string>
    <string name="NIK_label">NIK</string>
    <string name="mail_label">Email</string>
    <string name="password_label">Password</string>
    <string name="choose_loc">Pilih Lokasi</string>
    <string name="choosen_loc_label">Lokasi terpilih:</string>
    <string name="login_btn">Login</string>
    <string name="login_btn_txt">Login</string>
    <string name="register_question">Apakah anda tidak mempunyai akun?</string>
    <string name="reg_btn_txt">Registrasi</string>
    <string name="titipan_berjalan">Titipan berjalan</string>
    <string name="agent_name_label">Nama Agen</string>
    <string name="nama_penanggung_jawab">Nama Penanggung Jawab</string>
    <string name="titipan_baru_param_dimensi_txt">Dimensi:</string>
    <string name="titipan_baru_param_length_txt">Panjang:</string>
    <string name="titipan_baru_param_width_txt">Lebar:</string>
    <string name="titipan_baru_param_height_txt">Tinggi:</string>
    <string name="titipan_baru_param_weight_txt">Berat:</string>
    <string name="centimeter">cm</string>
    <string name="kilogram">kg</string>
    <string name="title_activity_peta_daftar_agen">Map</string>
    <string name="change">Ubah</string>
    <string name="pj">Penanggung jawab</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="logout">Keluar</string>
    <string name="new_pj">Penanggung jawab baru:</string>
    <string name="new_email">Email baru:</string>
    <string name="new_password">Sandi baru:</string>
    <string name="confirm_password">Konfirmasi sandi:</string>
    <string name="new_phone">Nomor baru:</string>
    <string name="curr_password">Sandi sekarang:</string>
    <string name="separ_slash">/</string>
</resources>