<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".RegistrasiAgent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scaleType="center"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/agent_name_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/frame_back_bg"
        android:hint="@string/agent_name_label"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <EditText
        android:id="@+id/fullname_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/frame_back_bg"
        android:hint="@string/nama_penanggung_jawab"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/agent_name_text" />
    <EditText
        android:id="@+id/username_text"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname_text"
        android:background="@color/frame_back_bg"
        android:hint="@string/username_label"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/nik_text"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text"
        android:background="@color/frame_back_bg"
        android:hint="@string/NIK_label"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/nope_text"
        android:inputType="text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nik_text"
        android:background="@color/frame_back_bg"
        android:hint="@string/nope_label"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/email_text"
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nope_text"
        android:background="@color/frame_back_bg"
        android:hint="@string/mail_label"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/pass_text"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        android:background="@color/frame_back_bg"
        android:hint="@string/password_label"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/addr_label_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/alamat_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/center_guideline_regis"
        app:layout_constraintTop_toBottomOf="@id/pass_text" />

    <Button
        android:id="@+id/sel_loc_btn_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/btn_bg"
        android:text="@string/choose_loc"
        app:layout_constraintBottom_toBottomOf="@+id/addr_label_regis"
        app:layout_constraintStart_toStartOf="@id/center_guideline_regis"
        app:layout_constraintTop_toTopOf="@id/addr_label_regis" />

    <TextView
        android:id="@+id/sel_loc_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sel_loc_btn_regis" />

    <Button
        android:id="@+id/regis_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/btn_yellow"
        android:text="@string/reg_btn_txt"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/center_guideline_regis"
        app:layout_constraintTop_toBottomOf="@id/sel_loc_regis" />

    <Button
        android:id="@+id/login_regis_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/btn_yellow"
        android:text="@string/login_btn"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/center_guideline_regis"
        app:layout_constraintTop_toBottomOf="@id/sel_loc_regis" />

</androidx.constraintlayout.widget.ConstraintLayout>