<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/curr_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curr_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass_curr_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="@+id/curr_pass_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/curr_pass_label"
        app:layout_constraintTop_toTopOf="@+id/curr_pass_label" />

    <TextView
        android:id="@+id/new_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_pass_label" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="@+id/new_pass_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_pass_label"
        app:layout_constraintTop_toTopOf="@+id/new_pass_label" />

    <TextView
        android:id="@+id/confirm_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_label" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_pass_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirm_pass_label"
        app:layout_constraintTop_toTopOf="@+id/confirm_pass_label" />

</androidx.constraintlayout.widget.ConstraintLayout>