<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/new_responsible_person_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pj"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_responsible_person"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_responsible_person_label" />

    <TextView
        android:id="@+id/new_responsible_nik_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/NIK_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_responsible_person" />

    <EditText
        android:id="@+id/new_responsible_nik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="number"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="@+id/new_responsible_nik_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_responsible_nik_label"
        app:layout_constraintTop_toTopOf="@+id/new_responsible_nik_label" />

    <TextView
        android:id="@+id/curr_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/curr_password"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_responsible_nik_label" />

    <EditText
        android:id="@+id/responsible_curr_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        app:layout_constraintBottom_toBottomOf="@+id/curr_pass_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/curr_pass_label"
        app:layout_constraintTop_toTopOf="@+id/curr_pass_label"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>